--- a/src/docs/Products/Products.yaml
+++ b/src/docs/Products/Products.yaml
@@ -1,19 +1,18 @@
 openapi: 3.0.0
 info:
   title: Products API
-  description: API for managing products.
+  description: API documentation for product management.
   version: 1.0.0
 servers:
-  - url: /api
-    description: The API server
-
+  - url: https://backend-production-61c2.up.railway.app/apidocs/
+    description: Local serverz
 paths:
   /products:
     get:
-      summary: Retrieve all products
+      summary: Get all products
       responses:
         '200':
-          description: A list of all products
+          description: List of all products
           content:
             application/json:
               schema:
@@ -21,46 +20,52 @@ paths:
                 properties:
                   status:
                     type: string
+                    description: Status of the request
                   payload:
                     type: array
                     items:
                       type: object
                       properties:
-                        id:
+                        _id:
                           type: string
+                          description: Product ID
                         title:
                           type: string
+                          description: Product title
                         price:
                           type: number
-                        thumbnail:
-                          type: string
+                          format: float
+                          description: Product price
                         stock:
                           type: integer
-
+                          description: Product stock
+                        thumbnail:
+                          type: string
+                          description: URL of the product thumbnail
     post:
       summary: Add a new product
       requestBody:
         required: true
         content:
-          application/json:
+          multipart/form-data:
             schema:
               type: object
               properties:
                 title:
                   type: string
-                description:
-                  type: string
                 price:
                   type: number
+                  format: float
                 stock:
                   type: integer
-                category:
-                  type: string
                 thumbnail:
-                  type: string
+                  type: array
+                  items:
+                    type: string
+                  description: URLs of product thumbnails
       responses:
         '200':
-          description: The created product
+          description: Product added successfully
           content:
             application/json:
               schema:
@@ -68,34 +73,29 @@ paths:
                 properties:
                   status:
                     type: string
+                    description: Status of the request
                   payload:
                     type: object
                     properties:
-                      id:
+                      _id:
                         type: string
-                      title:
-                        type: string
-                      price:
-                        type: number
-                      thumbnail:
-                        type: string
-                      stock:
-                        type: integer
-                      category:
-                        type: string
+                        description: Product ID
+        '400':
+          description: Error adding product
 
   /products/{pid}:
     get:
-      summary: Retrieve a specific product by ID
+      summary: Get a product by ID
       parameters:
         - name: pid
           in: path
           required: true
+          description: Product ID
           schema:
             type: string
       responses:
         '200':
-          description: The specified product
+          description: Product details
           content:
             application/json:
               schema:
@@ -103,19 +103,28 @@ paths:
                 properties:
                   status:
                     type: string
+                    description: Status of the request
                   payload:
                     type: object
                     properties:
-                      id:
+                      _id:
                         type: string
+                        description: Product ID
                       title:
                         type: string
+                        description: Product title
                       price:
                         type: number
-                      thumbnail:
-                        type: string
+                        format: float
+                        description: Product price
                       stock:
                         type: integer
+                        description: Product stock
+                      thumbnail:
+                        type: string
+                        description: URL of the product thumbnail
+        '400':
+          description: Error retrieving product
 
     put:
       summary: Update a product by ID
@@ -123,37 +132,44 @@ paths:
         - name: pid
           in: path
           required: true
+          description: Product ID
           schema:
             type: string
       requestBody:
         required: true
         content:
-          application/json:
+          multipart/form-data:
             schema:
               type: object
               properties:
                 title:
                   type: string
-                description:
-                  type: string
                 price:
                   type: number
+                  format: float
                 stock:
                   type: integer
-                category:
-                  type: string
                 thumbnail:
-                  type: string
+                  type: array
+                  items:
+                    type: string
+                  description: Updated URLs of product thumbnails
       responses:
         '200':
-          description: Success message
+          description: Product updated successfully
           content:
             application/json:
               schema:
                 type: object
                 properties:
+                  status:
+                    type: string
+                    description: Status of the request
                   message:
                     type: string
+                    description: Success message
+        '400':
+          description: Error updating product
 
     delete:
       summary: Delete a product by ID
@@ -161,35 +177,49 @@ paths:
         - name: pid
           in: path
           required: true
+          description: Product ID
           schema:
             type: string
       responses:
         '200':
-          description: Success message
+          description: Product deleted successfully
           content:
             application/json:
               schema:
                 type: object
                 properties:
+                  status:
+                    type: string
+                    description: Status of the request
                   message:
                     type: string
+                    description: Success message
+        '400':
+          description: Error deleting product
 
-components:
-  schemas:
-    Product:
-      type: object
-      properties:
-        id:
-          type: string
-        title:
-          type: string
-        description:
-          type: string
-        price:
-          type: number
-        stock:
-          type: integer
-        category:
-          type: string
-        thumbnail:
-          type: string
+  /products/{pid}/email:
+    delete:
+      summary: Send an email notification when a product is deleted
+      parameters:
+        - name: pid
+          in: path
+          required: true
+          description: Product ID
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Email sent successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    description: Status of the request
+                  success:
+                    type: string
+                    description: Success message
+        '400':
+          description: Error sending email
